Add div elements of grid

--- a/index.html
+++ b/index.html
@@ -8,6 +8,21 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-    
+    <div class="header">Tic Tac Toe</div>
+    <div class="game-settings">
+        <button class="play">PLAY</button>
+        <button class="restart">RESTART</button>
+    </div>
+    <div class="grid-container">
+        <div class="grid-item">1</div>
+        <div class="grid-item">2</div>
+        <div class="grid-item">3</div>
+        <div class="grid-item">4</div>
+        <div class="grid-item">5</div>
+        <div class="grid-item">6</div>
+        <div class="grid-item">7</div>
+        <div class="grid-item">8</div>
+        <div class="grid-item">9</div>
+    </div>
 </body>
 </html>
