Add announcement div

--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-    <div class="header">Tic Tac Toe</div>
+    <div class="header">Tic-Tac-Toe</div>
     <div class="game-settings">
         <button class="play">PLAY</button>
         <button class="restart">RESTART</button>
     </div>
+    <div class="announcement"></div>
     <div class="grid-container">
         <div class="grid-item">1</div>
         <div class="grid-item">2</div>
