--- a/index.html
+++ b/index.html
@@ -9,21 +9,23 @@
 </head>
 <body>
     <div class="header">Tic-Tac-Toe</div>
+    <div class="redvsblue">Red vs Blue</div>
     <div class="game-settings">
         <button class="play">PLAY</button>
         <button class="restart">RESTART</button>
     </div>
     <div class="announcement"></div>
     <div class="grid-container">
-        <div class="grid-item">1</div>
-        <div class="grid-item">2</div>
-        <div class="grid-item">3</div>
-        <div class="grid-item">4</div>
-        <div class="grid-item">5</div>
-        <div class="grid-item">6</div>
-        <div class="grid-item">7</div>
-        <div class="grid-item">8</div>
-        <div class="grid-item">9</div>
+        <div class="grid-item"><img ></div>
+        <div class="grid-item"><img ></div>
+        <div class="grid-item"><img ></div>
+        <div class="grid-item"><img ></div>
+        <div class="grid-item"><img ></div>
+        <div class="grid-item"><img ></div>
+        <div class="grid-item"><img ></div>
+        <div class="grid-item"><img ></div>
+        <div class="grid-item"><img ></div>
     </div>
+    <div class="footer">copyright © Adarsh Unni</div>
 </body>
 </html>
